[gd_scene load_steps=74 format=3 uid="uid://vpks3lkdh6n5"]

[ext_resource type="Script" path="res://src/board.gd" id="1_dug60"]
[ext_resource type="Script" path="res://src/board_theme.gd" id="2_66lkm"]
[ext_resource type="PhysicsMaterial" uid="uid://gx1wmihfum86" path="res://src/materials/walls.tres" id="2_qvmef"]
[ext_resource type="PackedScene" uid="uid://bum4x2wh8uta0" path="res://src/objects/ball/ball.tscn" id="3_umkkw"]
[ext_resource type="AudioStream" uid="uid://ca4neeyngldk0" path="res://assets/sounds/brick_destroyed.mp3" id="4_3su1s"]
[ext_resource type="AudioStream" uid="uid://b2opnpo1ky340" path="res://assets/sounds/ball_lost.mp3" id="4_mb56a"]
[ext_resource type="AudioStream" uid="uid://bon3t0fi4cyi4" path="res://assets/sounds/ball_wall.mp3" id="4_wp17m"]
[ext_resource type="PackedScene" uid="uid://pic0d12gq2ck" path="res://src/objects/board/modular_wall.tscn" id="4_xc2ga"]
[ext_resource type="AudioStream" uid="uid://dq8u1e3aa8mty" path="res://assets/sounds/ball_flipper.mp3" id="5_3gcje"]
[ext_resource type="Resource" uid="uid://cwqsw6bj12pvh" path="res://src/objects/board/flipper_slope.tres" id="5_5iedj"]
[ext_resource type="AudioStream" uid="uid://emjx16aamere" path="res://assets/sounds/kickback.mp3" id="5_vu7ap"]
[ext_resource type="Script" path="res://src/objects/board/wall_properties.gd" id="6_e23bc"]
[ext_resource type="PackedScene" uid="uid://cjqub7vse1qrt" path="res://src/objects/brick/brick.tscn" id="7_1k30u"]
[ext_resource type="AudioStream" uid="uid://x6phhu7d4w67" path="res://assets/sounds/bumper.mp3" id="7_6grxy"]
[ext_resource type="AudioStream" uid="uid://c6uwjnxl5582p" path="res://assets/sounds/slingshot.mp3" id="7_nc5cb"]
[ext_resource type="Script" path="res://src/objects/brick/brick_properties.gd" id="8_pg5rm"]
[ext_resource type="PackedScene" uid="uid://coh4tb7cvi0db" path="res://src/objects/flipper/flipper.tscn" id="9_rw7jb"]
[ext_resource type="PackedScene" uid="uid://gd2vjkhm8ywa" path="res://src/objects/slingshot/slingshot_left.tscn" id="10_dcn6p"]
[ext_resource type="PackedScene" uid="uid://cf1hlupu76v3o" path="res://src/objects/slingshot/slingshot_right.tscn" id="11_l5mum"]
[ext_resource type="PackedScene" uid="uid://en3henr63844" path="res://src/objects/bumper/bumper.tscn" id="12_wkwpx"]
[ext_resource type="Script" path="res://addons/event_audio/src/ea_event_bank_mounter.gd" id="13_q11xf"]
[ext_resource type="AudioStream" uid="uid://djxh6vyblo66b" path="res://assets/musics/To_Pass_Time-Godmode.mp3" id="14_6xqyi"]
[ext_resource type="Script" path="res://addons/event_audio/src/ea_event.gd" id="14_yim5u"]
[ext_resource type="Script" path="res://addons/event_audio/src/ea_event_playback_settings.gd" id="16_l7b6c"]
[ext_resource type="AudioStream" uid="uid://cqo6bi2ygpwbu" path="res://addons/event_audio/example/sounds/shot1.wav" id="17_uw4lh"]
[ext_resource type="Script" path="res://addons/event_audio/src/ea_event_bank.gd" id="18_nix55"]
[ext_resource type="Shader" path="res://src/board.gdshader" id="27_o87uh"]
[ext_resource type="Script" path="res://src/objects/board/wall_joint_properties.gd" id="27_xks6i"]
[ext_resource type="Texture2D" uid="uid://2pla8pd0bv6v" path="res://src/objects/board/assets/empty1x1.png" id="28_nbohr"]
[ext_resource type="PackedScene" uid="uid://du2feeoelork" path="res://src/objects/kickback/kickback.tscn" id="29_0neda"]
[ext_resource type="PackedScene" uid="uid://de2kcbjq5ukfq" path="res://src/objects/board/rounded_corner.tscn" id="30_1ip7v"]

[sub_resource type="Resource" id="Resource_qst8b"]
script = ExtResource("2_66lkm")
background_color = Color(0.254902, 0.411765, 0.882353, 1)
bricks_color = Color(2, 2, 2, 1)
walls_color = Color(1, 1, 1, 1)
slingshots_color = Color(1, 1, 1, 1)
bumpers_color = Color(1, 1, 1, 1)
flippers_color = Color(1, 1, 1, 1)
balls_color = Color(1, 1, 1, 1)

[sub_resource type="Environment" id="Environment_log15"]
background_mode = 3
glow_enabled = true

[sub_resource type="Resource" id="Resource_up5es"]
script = ExtResource("16_l7b6c")
stop_when_source_dies = false
stationary = false
volume_db = 0.0
min_pitch = 1.0
max_pitch = 1.0
panning_strength = 1.0
attenuation = 1.0
max_distance = 2000
unit_size = 10.0
max_db = 3.0

[sub_resource type="Resource" id="Resource_54wcp"]
script = ExtResource("14_yim5u")
audio_streams = Array[AudioStream]([ExtResource("5_3gcje")])
probability_weights = Array[float]([1.0])
trigger_tags = "ball_flipper"
playback_settings = SubResource("Resource_up5es")

[sub_resource type="Resource" id="Resource_kwr11"]
script = ExtResource("16_l7b6c")
stop_when_source_dies = false
stationary = false
volume_db = 0.0
min_pitch = 1.0
max_pitch = 1.0
panning_strength = 1.0
attenuation = 1.0
max_distance = 2000
unit_size = 10.0
max_db = 3.0

[sub_resource type="Resource" id="Resource_oa1p7"]
script = ExtResource("14_yim5u")
audio_streams = Array[AudioStream]([ExtResource("4_mb56a")])
probability_weights = Array[float]([1.0])
trigger_tags = "ball_lost"
playback_settings = SubResource("Resource_kwr11")

[sub_resource type="Resource" id="Resource_0sdme"]
script = ExtResource("16_l7b6c")
stop_when_source_dies = false
stationary = false
volume_db = 0.0
min_pitch = 1.0
max_pitch = 1.0
panning_strength = 1.0
attenuation = 1.0
max_distance = 2000
unit_size = 10.0
max_db = 3.0

[sub_resource type="Resource" id="Resource_7rpfo"]
script = ExtResource("14_yim5u")
audio_streams = Array[AudioStream]([ExtResource("4_wp17m")])
probability_weights = Array[float]([1.0])
trigger_tags = "ball_wall"
playback_settings = SubResource("Resource_0sdme")

[sub_resource type="Resource" id="Resource_cpdnj"]
script = ExtResource("16_l7b6c")
stop_when_source_dies = false
stationary = false
volume_db = 0.0
min_pitch = 1.0
max_pitch = 1.0
panning_strength = 1.0
attenuation = 1.0
max_distance = 2000
unit_size = 10.0
max_db = 3.0

[sub_resource type="Resource" id="Resource_j0wic"]
script = ExtResource("14_yim5u")
audio_streams = Array[AudioStream]([ExtResource("4_3su1s")])
probability_weights = Array[float]([1.0])
trigger_tags = "brick_destroyed"
playback_settings = SubResource("Resource_cpdnj")

[sub_resource type="Resource" id="Resource_m6d7l"]
script = ExtResource("16_l7b6c")
stop_when_source_dies = false
stationary = false
volume_db = 0.0
min_pitch = 1.0
max_pitch = 1.0
panning_strength = 1.0
attenuation = 1.0
max_distance = 2000
unit_size = 10.0
max_db = 3.0

[sub_resource type="Resource" id="Resource_g8jcr"]
script = ExtResource("14_yim5u")
audio_streams = Array[AudioStream]([ExtResource("17_uw4lh")])
probability_weights = Array[float]([1.0])
trigger_tags = "brick_hit"
playback_settings = SubResource("Resource_m6d7l")

[sub_resource type="Resource" id="Resource_wov8n"]
script = ExtResource("16_l7b6c")
stop_when_source_dies = false
stationary = false
volume_db = 0.0
min_pitch = 1.0
max_pitch = 1.0
panning_strength = 1.0
attenuation = 1.0
max_distance = 2000
unit_size = 10.0
max_db = 3.0

[sub_resource type="Resource" id="Resource_h4njo"]
script = ExtResource("14_yim5u")
audio_streams = Array[AudioStream]([ExtResource("7_6grxy")])
probability_weights = Array[float]([1.0])
trigger_tags = "bumper"
playback_settings = SubResource("Resource_wov8n")

[sub_resource type="Resource" id="Resource_4b417"]
script = ExtResource("16_l7b6c")
stop_when_source_dies = false
stationary = false
volume_db = 0.0
min_pitch = 1.0
max_pitch = 1.0
panning_strength = 1.0
attenuation = 1.0
max_distance = 2000
unit_size = 10.0
max_db = 3.0

[sub_resource type="Resource" id="Resource_awm70"]
script = ExtResource("14_yim5u")
audio_streams = Array[AudioStream]([ExtResource("5_vu7ap")])
probability_weights = Array[float]([1.0])
trigger_tags = "kickback"
playback_settings = SubResource("Resource_4b417")

[sub_resource type="Resource" id="Resource_7ahtv"]
script = ExtResource("16_l7b6c")
stop_when_source_dies = false
stationary = false
volume_db = 0.0
min_pitch = 1.0
max_pitch = 1.0
panning_strength = 1.0
attenuation = 1.0
max_distance = 2000
unit_size = 10.0
max_db = 3.0

[sub_resource type="Resource" id="Resource_aqr0g"]
script = ExtResource("14_yim5u")
audio_streams = Array[AudioStream]([ExtResource("7_nc5cb")])
probability_weights = Array[float]([1.0])
trigger_tags = "slingshot"
playback_settings = SubResource("Resource_7ahtv")

[sub_resource type="Resource" id="Resource_enyqf"]
script = ExtResource("18_nix55")
entries = Array[ExtResource("14_yim5u")]([SubResource("Resource_54wcp"), SubResource("Resource_oa1p7"), SubResource("Resource_7rpfo"), SubResource("Resource_j0wic"), SubResource("Resource_g8jcr"), SubResource("Resource_h4njo"), SubResource("Resource_awm70"), SubResource("Resource_aqr0g")])

[sub_resource type="AudioStreamPlaylist" id="AudioStreamPlaylist_go1sc"]
stream_count = 1
stream_0 = ExtResource("14_6xqyi")

[sub_resource type="Gradient" id="Gradient_4tunj"]
colors = PackedColorArray(0.263463, 0.643941, 1, 1, 0.0226506, 0.30918, 0.524441, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_a1hog"]
gradient = SubResource("Gradient_4tunj")
width = 1920
height = 3240
fill_to = Vector2(1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g0lsj"]
shader = ExtResource("27_o87uh")
shader_parameter/bottom_color = Color(0, 0, 0, 0.501961)
shader_parameter/top_color = Color(0, 0, 0, 0.0980392)
shader_parameter/wave_amp = 0.044
shader_parameter/wave_size = 1.559
shader_parameter/wave_time_mul = 0.487
shader_parameter/total_phases = 5

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_f88l0"]
normal = Vector2(0, 1)
distance = -3240.0

[sub_resource type="Resource" id="Resource_irgvw"]
script = ExtResource("6_e23bc")
thickness = 20.0
length = 3240.0
rounded = false
color = Color(1, 1, 1, 1)
physics_material = ExtResource("2_qvmef")
collision_rounded = false
adjust_collision_margin = Vector2(0, 0)

[sub_resource type="Resource" id="Resource_xfu38"]
script = ExtResource("6_e23bc")
thickness = 20.0
length = 3040.0
rounded = false
color = Color(1, 1, 1, 1)
physics_material = ExtResource("2_qvmef")
collision_rounded = false
adjust_collision_margin = Vector2(0, 0)

[sub_resource type="Resource" id="Resource_u0ffd"]
script = ExtResource("27_xks6i")
radius = 15.0
hole_radius = 0.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_fbef7"]

[sub_resource type="Resource" id="Resource_7ty7w"]
script = ExtResource("8_pg5rm")
hits = 1
can_be_destroyed_by_ball = true
can_be_destroyed_by_rocket = true
shape = 4

[sub_resource type="Resource" id="Resource_sr1u2"]
script = ExtResource("8_pg5rm")
hits = 1
can_be_destroyed_by_ball = true
can_be_destroyed_by_rocket = true
shape = 1

[sub_resource type="Resource" id="Resource_ggsk2"]
script = ExtResource("8_pg5rm")
hits = 1
can_be_destroyed_by_ball = true
can_be_destroyed_by_rocket = true
shape = 6

[sub_resource type="Resource" id="Resource_b5id7"]
script = ExtResource("6_e23bc")
thickness = 15.0
length = 580.0
rounded = true
color = Color(1, 1, 1, 1)
collision_rounded = true
adjust_collision_margin = Vector2(0, 0)

[sub_resource type="Resource" id="Resource_72gcx"]
script = ExtResource("6_e23bc")
thickness = 15.0
length = 470.0
rounded = true
color = Color(1, 1, 1, 1)
collision_rounded = true
adjust_collision_margin = Vector2(0, 0)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_6f5wp"]
friction = 0.8
bounce = 0.15

[sub_resource type="Resource" id="Resource_5vyby"]
script = ExtResource("27_xks6i")
radius = 32.0
hole_radius = 10.0

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_rwyem"]
friction = 0.2
rough = true
bounce = 0.2

[sub_resource type="Resource" id="Resource_12qaa"]
script = ExtResource("6_e23bc")
thickness = 15.0
length = 280.0
rounded = true
color = Color(1, 1, 1, 1)
physics_material = SubResource("PhysicsMaterial_rwyem")
collision_rounded = true
adjust_collision_margin = Vector2(0, 0)

[sub_resource type="Resource" id="Resource_6vblj"]
script = ExtResource("27_xks6i")
radius = 15.0
hole_radius = 0.0

[sub_resource type="Resource" id="Resource_xm5dn"]
script = ExtResource("6_e23bc")
thickness = 15.0
length = 280.0
rounded = true
color = Color(1, 1, 1, 1)
physics_material = SubResource("PhysicsMaterial_rwyem")
collision_rounded = true
adjust_collision_margin = Vector2(0, 0)

[sub_resource type="Resource" id="Resource_2k2st"]
script = ExtResource("27_xks6i")
radius = 15.0
hole_radius = 0.0

[sub_resource type="Resource" id="Resource_cv700"]
script = ExtResource("6_e23bc")
thickness = 15.0
length = 293.0
rounded = false
color = Color(1, 1, 1, 1)
physics_material = SubResource("PhysicsMaterial_rwyem")
collision_rounded = true
adjust_collision_margin = Vector2(0, 0)

[sub_resource type="Resource" id="Resource_k4i0i"]
script = ExtResource("27_xks6i")
radius = 15.0
hole_radius = 0.0

[node name="Board" type="Node2D"]
script = ExtResource("1_dug60")
theme = SubResource("Resource_qst8b")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_log15")

[node name="EAEventBankMounter" type="Node" parent="."]
script = ExtResource("13_q11xf")
_audio_bank_resource = SubResource("Resource_enyqf")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamPlaylist_go1sc")
volume_db = -20.0
autoplay = true
bus = &"Music"

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(0, -3240)
texture = SubResource("GradientTexture2D_a1hog")
centered = false
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_g0lsj")
position = Vector2(0, -500)
scale = Vector2(1920, 500)
texture = ExtResource("28_nbohr")
centered = false

[node name="Borders" type="StaticBody2D" parent="."]
physics_material_override = ExtResource("2_qvmef")
metadata/_edit_lock_ = true

[node name="CollisionShapeTop" type="CollisionShape2D" parent="Borders"]
shape = SubResource("WorldBoundaryShape2D_f88l0")

[node name="Camera" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(960, -1620)

[node name="Ball" parent="." instance=ExtResource("3_umkkw")]
unique_name_in_owner = true
position = Vector2(1870, -184)
disable_mode = 1
collision_priority = 10.0

[node name="Walls" type="Node2D" parent="."]

[node name="Right" parent="Walls" instance=ExtResource("4_xc2ga")]
position = Vector2(1910, -1620)
physics_material_override = ExtResource("2_qvmef")
properties = SubResource("Resource_irgvw")

[node name="Right2" parent="Walls" instance=ExtResource("4_xc2ga")]
position = Vector2(1830, -1521)
physics_material_override = ExtResource("2_qvmef")
properties = SubResource("Resource_xfu38")
start_joint_properties = SubResource("Resource_u0ffd")

[node name="Left" parent="Walls" instance=ExtResource("4_xc2ga")]
position = Vector2(10, -1620)
physics_material_override = ExtResource("2_qvmef")
properties = SubResource("Resource_irgvw")

[node name="InnerWalls" type="Node2D" parent="."]

[node name="LoseBallArea" type="Area2D" parent="."]
collision_mask = 2
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="LoseBallArea"]
shape = SubResource("WorldBoundaryShape2D_fbef7")

[node name="Bricks" type="Node2D" parent="."]

[node name="Brick" parent="Bricks" instance=ExtResource("7_1k30u")]
modulate = Color(2, 2, 2, 1)
position = Vector2(840, -990)
properties = SubResource("Resource_7ty7w")

[node name="Brick9" parent="Bricks" instance=ExtResource("7_1k30u")]
modulate = Color(2, 2, 2, 1)
position = Vector2(320, -3040)
properties = SubResource("Resource_7ty7w")

[node name="Brick2" parent="Bricks" instance=ExtResource("7_1k30u")]
modulate = Color(2, 2, 2, 1)
position = Vector2(900, -990)
properties = SubResource("Resource_7ty7w")

[node name="Brick3" parent="Bricks" instance=ExtResource("7_1k30u")]
modulate = Color(2, 2, 2, 1)
position = Vector2(900, -930)
properties = SubResource("Resource_sr1u2")

[node name="Brick4" parent="Bricks" instance=ExtResource("7_1k30u")]
modulate = Color(2, 2, 2, 1)
position = Vector2(960, -930)
properties = SubResource("Resource_sr1u2")

[node name="Brick5" parent="Bricks" instance=ExtResource("7_1k30u")]
modulate = Color(2, 2, 2, 1)
position = Vector2(1020, -930)
properties = SubResource("Resource_sr1u2")

[node name="Brick6" parent="Bricks" instance=ExtResource("7_1k30u")]
modulate = Color(2, 2, 2, 1)
position = Vector2(960, -990)
properties = SubResource("Resource_7ty7w")

[node name="Brick7" parent="Bricks" instance=ExtResource("7_1k30u")]
modulate = Color(2, 2, 2, 1)
position = Vector2(1020, -990)
properties = SubResource("Resource_7ty7w")

[node name="Brick8" parent="Bricks" instance=ExtResource("7_1k30u")]
modulate = Color(2, 2, 2, 1)
position = Vector2(1080, -990)
properties = SubResource("Resource_7ty7w")

[node name="Brick17" parent="Bricks" instance=ExtResource("7_1k30u")]
modulate = Color(2, 2, 2, 1)
position = Vector2(1540, -2570)
properties = SubResource("Resource_ggsk2")

[node name="Brick18" parent="Bricks" instance=ExtResource("7_1k30u")]
modulate = Color(2, 2, 2, 1)
position = Vector2(1480, -2570)
properties = SubResource("Resource_ggsk2")

[node name="Brick19" parent="Bricks" instance=ExtResource("7_1k30u")]
modulate = Color(2, 2, 2, 1)
position = Vector2(1420, -2570)
properties = SubResource("Resource_ggsk2")

[node name="Brick20" parent="Bricks" instance=ExtResource("7_1k30u")]
modulate = Color(2, 2, 2, 1)
position = Vector2(1360, -2570)
properties = SubResource("Resource_ggsk2")

[node name="Brick21" parent="Bricks" instance=ExtResource("7_1k30u")]
modulate = Color(2, 2, 2, 1)
position = Vector2(1420, -2630)
properties = SubResource("Resource_ggsk2")

[node name="Brick22" parent="Bricks" instance=ExtResource("7_1k30u")]
modulate = Color(2, 2, 2, 1)
position = Vector2(1480, -2630)
properties = SubResource("Resource_ggsk2")

[node name="Brick23" parent="Bricks" instance=ExtResource("7_1k30u")]
modulate = Color(2, 2, 2, 1)
position = Vector2(1480, -2510)
properties = SubResource("Resource_ggsk2")

[node name="Brick24" parent="Bricks" instance=ExtResource("7_1k30u")]
modulate = Color(2, 2, 2, 1)
position = Vector2(1420, -2510)
properties = SubResource("Resource_ggsk2")

[node name="Bumper" parent="." instance=ExtResource("12_wkwpx")]
position = Vector2(1600, -890)
radius = 65.0

[node name="Bumper4" parent="." instance=ExtResource("12_wkwpx")]
position = Vector2(410, -2600)
radius = 65.0

[node name="Bumper5" parent="." instance=ExtResource("12_wkwpx")]
position = Vector2(670, -2450)
radius = 65.0

[node name="Bumper2" parent="." instance=ExtResource("12_wkwpx")]
position = Vector2(980, -2560)
radius = 65.0

[node name="Bumper3" parent="." instance=ExtResource("12_wkwpx")]
position = Vector2(1513, -1732)
radius = 65.0

[node name="ModularWall" parent="." instance=ExtResource("4_xc2ga")]
position = Vector2(216, -777)
rotation = -0.785398
properties = SubResource("Resource_b5id7")

[node name="ModularWall2" parent="." instance=ExtResource("4_xc2ga")]
position = Vector2(1715, -780)
rotation = 0.488692
properties = SubResource("Resource_72gcx")

[node name="Flippers and Slingshots" type="Node2D" parent="."]

[node name="FlipperLeft" parent="Flippers and Slingshots" instance=ExtResource("9_rw7jb")]
position = Vector2(700, -146)
rotation = 0.436332
angle_degrees = -45.0

[node name="FlipperRight" parent="Flippers and Slingshots" instance=ExtResource("9_rw7jb")]
position = Vector2(1220, -146)
rotation = -0.436332
side = 1

[node name="Wall Flip Left" parent="Flippers and Slingshots" instance=ExtResource("4_xc2ga")]
position = Vector2(550, -218)
rotation = -1.13446
physics_material_override = SubResource("PhysicsMaterial_6f5wp")
properties = ExtResource("5_5iedj")
start_joint_properties = SubResource("Resource_5vyby")

[node name="Wall Flip Right" parent="Flippers and Slingshots" instance=ExtResource("4_xc2ga")]
position = Vector2(1370, -218)
rotation = 1.13446
physics_material_override = SubResource("PhysicsMaterial_6f5wp")
properties = ExtResource("5_5iedj")
start_joint_properties = SubResource("Resource_5vyby")

[node name="Wall SS Left" parent="Flippers and Slingshots" instance=ExtResource("4_xc2ga")]
position = Vector2(424, -430)
physics_material_override = SubResource("PhysicsMaterial_rwyem")
properties = SubResource("Resource_12qaa")
start_joint_properties = SubResource("Resource_6vblj")

[node name="Wall SS Right" parent="Flippers and Slingshots" instance=ExtResource("4_xc2ga")]
position = Vector2(1497, -430)
physics_material_override = SubResource("PhysicsMaterial_rwyem")
properties = SubResource("Resource_xm5dn")
start_joint_properties = SubResource("Resource_2k2st")

[node name="Wall SS Right2" parent="Flippers and Slingshots" instance=ExtResource("4_xc2ga")]
position = Vector2(1604, -423)
physics_material_override = SubResource("PhysicsMaterial_rwyem")
properties = SubResource("Resource_cv700")
start_joint_properties = SubResource("Resource_2k2st")
end_joint_properties = SubResource("Resource_k4i0i")

[node name="SlingshotLeft" parent="Flippers and Slingshots" instance=ExtResource("10_dcn6p")]
position = Vector2(500, -594)

[node name="SlingshotRight" parent="Flippers and Slingshots" instance=ExtResource("11_l5mum")]
position = Vector2(1420, -594)

[node name="Launcher" parent="." instance=ExtResource("29_0neda")]
position = Vector2(1870, -105)
amplitude = 150.0
strength = 32000.0
auto_eject = false
inactive = false

[node name="RoundedCorner" parent="." instance=ExtResource("30_1ip7v")]
position = Vector2(1699, -3240)

[node name="KickBack" parent="." instance=ExtResource("29_0neda")]
position = Vector2(1559, -227)
strength = 200000.0
disable_movement = true
inactive = false

[connection signal="body_entered" from="LoseBallArea" to="." method="_on_lose_ball_area_body_entered"]
[connection signal="ejected" from="KickBack" to="." method="_on_kick_back_ejection"]
